local-setup/example-data/yaml/marketplace-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: marketplace-ui
  namespace: platform-mesh-system
spec:
  hostnames:
    - portal.dev.local
    - '*.portal.dev.local'
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: k8sapi-gateway
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: marketplace-ui
          namespace: platform-mesh-system
          port: 8080
          weight: 1
      filters:
        - requestHeaderModifier:
            set:
              - name: Host
                value: portal.dev.local
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /ui/marketplace
